# U-Download

./: .gitattributes  .gitignore  .release-commit-msg  LICENSE  README.md  RELEASE_NOTES.txt  build-size-report.json  package-lock.json  package.json  u-download.desktop  udownload.keystore
.github/workflows/: release.yml  version-bump.yml
packaging/aur/: PKGBUILD
packaging/chocolatey/: u-download.nuspec
packaging/flatpak/: com.udownload.UDownload.json
packaging/homebrew/: u-download.rb
packaging/nixpkgs/: u-download.nix
packaging/scoop/: u-download.json
packaging/snap/: snapcraft.yaml
packaging/winget/manifests/: okwareddevnet.UDownload.installer.yaml  okwareddevnet.UDownload.locale.en-US.yaml  okwareddevnet.UDownload.yaml
release-artifacts-v3/: checksums.txt
release-assets/: content_manifest.json  latest.json
scripts/: generate-release-notes.sh  make-icons.cjs  version-sync.sh
src/: App.css  App.jsx  ContentDownloadModal.jsx  ContentSettingsPanel.jsx  SoundNotifications.js  VideoPreview.css  VideoPreview.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.backup
src-tauri/assets/: README.rpm  copyright  entitlements.mas.plist  entitlements.plist  msi-template.wxs  nsis-hooks.nsh  nsis-lang-en.nsh  nsis-lang-es.nsh  nsis-template.nsi  public_key.pem  u-download.1  u-download.desktop  updater-manifest.json
src-tauri/assets/pkg-resources/: conclusion.txt  welcome.txt
src-tauri/assets/pkg-scripts/: postinstall
src-tauri/binaries/linux-arm64/: aria2c
src-tauri/binaries/linux-x64/: aria2c  ffmpeg  yt-dlp
src-tauri/binaries/macos-arm64/: aria2c  yt-dlp
src-tauri/binaries/macos-x64/: aria2c
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary_manager.rs  content_downloader.rs  content_manifest.rs  crypto.rs  lib.rs  main.rs
