[package]
name = "u-download"
version = "2.0.2"
description = "Professional YouTube downloader with GUI"
authors = ["Dedan Okware<softengde@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/okwareddevnet/u-download"
repository = "https://github.com/okwareddevnet/u-download"
keywords = ["youtube", "downloader", "gui", "desktop", "rust"]
categories = ["multimedia", "gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "u_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
