[package]
name = "u-download"
version = "2.2.2"
description = "Professional YouTube downloader with GUI"
authors = ["Dedan Okware<softengde@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/okwareddevnet/u-download"
repository = "https://github.com/okwareddevnet/u-download"
keywords = ["youtube", "downloader", "gui", "desktop", "rust"]
categories = ["multimedia", "gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "u_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "wry"], default-features = false }
tauri-plugin-opener = { version = "2.0", default-features = false }
tauri-plugin-store = { version = "2.0", default-features = false }
tauri-plugin-dialog = { version = "2.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
tauri-plugin-notification = { version = "2", default-features = false }
rustube = { version = "0.6.0", default-features = false, features = ["fetch", "rustls-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
yt-dlp = { version = "1.3.4", default-features = false }
url = "2.4"
scraper = "0.18"
rand = "0.8"
